library/src/libqtextdocument.h

typedef struct QAbstractUndoItem QAbstractUndoItem;
typedef struct QObject QObject;
typedef struct QPainter QPainter;
typedef struct QRectF QRectF;
typedef struct QRegularExpression QRegularExpression;
typedef struct QTextCursor QTextCursor;
typedef struct QTextDocument QTextDocument;
typedef struct QTextFormat QTextFormat;
typedef struct QTextObject QTextObject;
typedef struct QUrl QUrl;
typedef struct QVariant QVariant;
void QTextDocument_Connect_CursorPositionChanged(QTextDocument* self, intptr_t slot);
void QTextDocument_Connect_BlockCountChanged(QTextDocument* self, intptr_t slot);
void QTextDocument_Connect_BaseUrlChanged(QTextDocument* self, intptr_t slot);
void QTextDocument_Connect_DocumentLayoutChanged(QTextDocument* self, intptr_t slot);
void QTextDocument_Undo2(QTextDocument* self);
void QTextDocument_Redo2(QTextDocument* self);
void QTextDocument_AppendUndoItem(QTextDocument* self, QAbstractUndoItem* param1);
void QTextDocument_SetModified(QTextDocument* self);
QTextObject* QTextDocument_CreateObject(QTextDocument* self, QTextFormat* f);
QVariant* QTextDocument_LoadResource(QTextDocument* self, int typeVal, QUrl* name);
libqt_string QTextDocument_Tr2(const char* s, const char* c);
libqt_string QTextDocument_Tr3(const char* s, const char* c, int n);
QTextDocument* QTextDocument_Clone1(const QTextDocument* self, QObject* parent);
libqt_string QTextDocument_ToMarkdown1(const QTextDocument* self, int features);
void QTextDocument_SetMarkdown2(QTextDocument* self, libqt_string markdown, int features);
QTextCursor* QTextDocument_Find22(const QTextDocument* self, libqt_string subString, int from);
QTextCursor* QTextDocument_Find32(const QTextDocument* self, libqt_string subString, int from, int options);
QTextCursor* QTextDocument_Find33(const QTextDocument* self, libqt_string subString, QTextCursor* cursor, int options);
QTextCursor* QTextDocument_Find23(const QTextDocument* self, QRegularExpression* expr, int from);
QTextCursor* QTextDocument_Find34(const QTextDocument* self, QRegularExpression* expr, int from, int options);
QTextCursor* QTextDocument_Find35(const QTextDocument* self, QRegularExpression* expr, QTextCursor* cursor, int options);
void QTextDocument_DrawContents2(QTextDocument* self, QPainter* painter, QRectF* rect);
void QTextDocument_ClearUndoRedoStacks1(QTextDocument* self, int historyToClear);
void QTextDocument_SetModified1(QTextDocument* self, bool m);
void QTextDocument_Delete(QTextDocument* self);