src/qt/libqtextdocument.bf

	[LinkName("QTextDocument_Connect_CursorPositionChanged")]
	public static extern void QTextDocument_Connect_CursorPositionChanged(void* c_this, c_intptr slot);
	[LinkName("QTextDocument_Connect_BlockCountChanged")]
	public static extern void QTextDocument_Connect_BlockCountChanged(void* c_this, c_intptr slot);
	[LinkName("QTextDocument_Connect_BaseUrlChanged")]
	public static extern void QTextDocument_Connect_BaseUrlChanged(void* c_this, c_intptr slot);
	[LinkName("QTextDocument_Connect_DocumentLayoutChanged")]
	public static extern void QTextDocument_Connect_DocumentLayoutChanged(void* c_this, c_intptr slot);
	[LinkName("QTextDocument_Undo2")]
	public static extern void QTextDocument_Undo2(void* c_this);
	[LinkName("QTextDocument_Redo2")]
	public static extern void QTextDocument_Redo2(void* c_this);
	[LinkName("QTextDocument_AppendUndoItem")]
	public static extern void QTextDocument_AppendUndoItem(void* c_this, void* param1);
	[LinkName("QTextDocument_SetModified")]
	public static extern void QTextDocument_SetModified(void* c_this);
	[LinkName("QTextDocument_CreateObject")]
	public static extern void* QTextDocument_CreateObject(void* c_this, void* f);
	[LinkName("QTextDocument_LoadResource")]
	public static extern void QTextDocument_LoadResource(void* c_this, int32 typeVal, void* name);
	[LinkName("QTextDocument_Tr2")]
	public static extern libqt_string QTextDocument_Tr2(char8* s, char8* c);
	[LinkName("QTextDocument_Tr3")]
	public static extern libqt_string QTextDocument_Tr3(char8* s, char8* c, int32 n);
	[LinkName("QTextDocument_Clone1")]
	public static extern void* QTextDocument_Clone1(void* c_this, void* parent);
	[LinkName("QTextDocument_ToMarkdown1")]
	public static extern libqt_string QTextDocument_ToMarkdown1(void* c_this, int64 features);
	[LinkName("QTextDocument_SetMarkdown2")]
	public static extern void QTextDocument_SetMarkdown2(void* c_this, libqt_string markdown, int64 features);
	[LinkName("QTextDocument_Find22")]
	public static extern void QTextDocument_Find22(void* c_this, libqt_string subString, int32 from);
	[LinkName("QTextDocument_Find32")]
	public static extern void QTextDocument_Find32(void* c_this, libqt_string subString, int32 from, int64 options);
	[LinkName("QTextDocument_Find33")]
	public static extern void QTextDocument_Find33(void* c_this, libqt_string subString, void* cursor, int64 options);
	[LinkName("QTextDocument_Find23")]
	public static extern void QTextDocument_Find23(void* c_this, void* expr, int32 from);
	[LinkName("QTextDocument_Find34")]
	public static extern void QTextDocument_Find34(void* c_this, void* expr, int32 from, int64 options);
	[LinkName("QTextDocument_Find35")]
	public static extern void QTextDocument_Find35(void* c_this, void* expr, void* cursor, int64 options);
	[LinkName("QTextDocument_DrawContents2")]
	public static extern void QTextDocument_DrawContents2(void* c_this, void* painter, void* rect);
	[LinkName("QTextDocument_ClearUndoRedoStacks1")]
	public static extern void QTextDocument_ClearUndoRedoStacks1(void* c_this, int64 historyToClear);
	[LinkName("QTextDocument_SetModified1")]
	public static extern void QTextDocument_SetModified1(void* c_this, bool m);
	/// Delete this object from C++ memory
	[LinkName("QTextDocument_Delete")]
	public static extern void QTextDocument_Delete(void* self);
}